# spotify-smart-playlists

./: .gitignore  LICENSE  Makefile  README.md  dvc.yaml  environment.yaml  params.yaml  pyproject.toml  requirements.txt  setup.py  spotify.db.dvc
.dvc/: config
.github/workflows/: hands-free-playlists.yml  lint.yml  pull-recent-tracks.yml  simple-playlists.yml
analysis/: spotify.malloy
pipeline/: .prefectignore  build_root_playlists.py  database.py  load_smart_playlists.py  pull_library.py  pull_recent_tracks.py  update-recent-tracks-deployment.yaml  update-smart-playlists-deployment.yaml  update_artists.py  update_recent_tracks-deployment.yaml  update_recent_tracks.py  update_recent_tracks_docker.py  update_smart_playlists-deployment.yaml  update_smart_playlists.py  update_smart_playlists_docker.py  update_track_audio_features.py
pipeline/data/: .gitignore
pipeline/playlists/: all_high_energy.yaml  calm_instrumentals.yaml  hip_hop.yaml  synthwave_speed.yaml  wu_tang.yaml
playlists/: all_high_energy.yaml  all_synthwave.yaml  angry_instrumentals.yaml  calm_instrumentals.yaml  hip_hop.yaml  synthwave_flow.yaml  synthwave_speed.yaml  wu_tang.yaml
scripts/: load_blocks.py  pull_recent_tracks.py  remove_old_playlist_tables.py  remove_play_history_played_at_timezone.py  spotify_current_user_playlists.py  spotify_library.py  spotify_recent.py
scripts/examples/: gh_secret_stuff.py  spotify_current_user_playlists.py  spotify_recent.py
scripts/hands-free/: load_playlist.py  log_recent_plays.py  make_root_playlist.py  pull_artists.py  pull_audio_features.py  (+2 more)
(+13 files in other folders)
